@@ -9,7 +9,7 @@
   <configure name="NAME" value="ImageMagick"/>
   <configure name="VERSION" value="6.7.2"/>
   <configure name="LIB_VERSION" value="0x672"/>
-  <configure name="LIB_VERSION_NUMBER" value="6,7,2,3"/>
+  <configure name="LIB_VERSION_NUMBER" value="6,7,2,2"/>
   <configure name="SVN_REVISION" value="5060" />
   <configure name="RELEASE_DATE" value="2011-09-05"/>
   <configure name="CONFIGURE" value="./configure "/>
